--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 
     <footer>
         <p>© 2025 brunny.eth</p>
-        <p class="quote">The ultimate fate of all intelligent beings has always been to become as grand as their thoughts. - The Three-Body Problem Trilogy, Cixin Liu</p>
+        <p class="quote">The ultimate fate of all intelligent beings has always been to become as grand as their thoughts. - The Three-Body Problem Trilogy</p>
     </footer>
     
     <script>
